# hyprdock

./: .clang-format  CMakeLists.txt  LICENSE  README.md  build.sh
include/: commands.hpp  config.hpp  hyprdock.hpp  ipc.hpp  utils.hpp
src/: commands.cpp  config.cpp  hyprdock.cpp  ipc.cpp  main.cpp  utils.cpp
